--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "dev": "webpack-dev-server --env --hot --inline --colors --config ./webpack.config.dev.js ",
+    "start": "webpack-dev-server --env --hot --inline --colors --config ./webpack.config.dev.js ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
