--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "start": "webpack-dev-server --env --hot --inline --colors --config ./webpack.config.dev.js ",
+    "start": "webpack-dev-server --env --hot --inline --colors --config ./webpack.config.dev.js",
+    "build": "webpack --production --config ./webpack.config.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
