--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "espower": "^2.1.0",
     "file-loader": "^1.1.11",
     "font-awesome": "^4.7.0",
+    "fs": "0.0.1-security",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.0.2",
     "less-loader": "^4.1.0",
@@ -60,6 +61,8 @@
     "webpack-dev-server": "^3.1.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.0",
+    "@babel/plugin-transform-arrow-functions": "^7.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "webpack-cli": "^2.0.14"
   }
